2007-11-26  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c (prefs_set): reschedule the idle and no_project
	timers when these configurations are changed.

	* src/idle-dialog.c (raise_idle_dialog): Fixed check for validity
	of the idle dialog.

2007-11-18  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/active-dialog.c (schedule_active_timeout): Schedule timeout
	only if it's greater than 0 seconds.

2007-11-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* scripts/Makefile.am (dist_bin_SCRIPTS): Added list of
	scripts to be installed.

2007-11-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c: Created a separate hourly timer for the zeroing the
	daily counters.

2007-11-07  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c (prefs_set): restart the main timer when needed.

	* src/app.c (cur_proj_set): start/stop the main timer when needed.

	* src/timer.c (start_main_timer, start_file_save_timer)
	(start_config_save_timer): Added functions to start the main
	timer, file save timer and configuration save timer independently
	of each other.
	(main_timer_func, config_save_timer_func, file_save_timer_func):
	Separated the handling routines for each timer.
	(start_idle_timer, start_no_project_timer): Renamed the
	timer_arm_* functions for name consistency with the other
	start_*_timer functions.
	(stop_main_timer): Created function to stop the main timer when it
	is not needed.

2007-10-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (timer_arm_idle_timeout, timer_arm_active_timeout):
	Use the new active dialog timer activation and deactivation
	functions.

	* src/idle-dialog.c: Removed declaration of unused variables.

	* src/active-dialog.c (struct GttActiveDialog_s): Remove unneded
	fields (idt, armed, time_armed) and added the timeout_event_source
	field.
	(active_timeout_func): Added function to show the dialog when the
	no project timeout expires.